test-package-compiler/src/snapshots/test_package_compiler__generated_tests__unknown_module_field_in_constant.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 107
expression: /Users/louis/src/gleam/gleam/test-package-compiler/cases/unknown_module_field_in_constant
---
error: Unknown module field
  ┌─ src/two.gleam:3:16
  │
3 │ pub const it = one.B
  │                ^^^^^ Did you mean `A`?

The module `one` does not have a `B` field.

